--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
   },
   "type": "commonjs",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.5",
     "bcryptjs": "^3.0.2",
     "connect-flash-plus": "^0.2.1",
-    "dotenv": "^17.0.1",
+    "dotenv": "^17.2.0",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
     "express": "^4.19.2",
