--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@sendgrid/mail": "^8.1.5",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^1.41.3",
     "connect-flash-plus": "^0.2.1",
     "dompurify": "^3.2.6",
     "dotenv": "^17.2.0",
@@ -31,6 +32,7 @@
     "mongoose": "^8.16.1",
     "morgan": "^1.10.0",
     "multer": "^2.0.0",
+    "multer-storage-cloudinary": "^4.0.0",
     "node-cron": "^4.2.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
