--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
   },
   "type": "commonjs",
   "dependencies": {
+    "@getbrevo/brevo": "^3.0.1",
+    "@google/genai": "^1.24.0",
     "@sendgrid/mail": "^8.1.5",
+    "axios": "^1.7.2",
     "bcryptjs": "^3.0.2",
+    "cheerio": "^1.0.0-rc.12",
     "cloudinary": "^1.41.3",
     "connect-flash-plus": "^0.2.1",
     "dompurify": "^3.2.6",
@@ -28,6 +32,7 @@
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
     "jsdom": "^26.1.0",
+    "marked": "^13.0.2",
     "method-override": "^3.0.0",
     "mongoose": "^8.16.1",
     "morgan": "^1.10.0",
