--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
-    "seed": "node seeds.js",
+    "adminseed": "node adminSeed.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
